#-------------------------------------------------------------------------------
# Copyright (C) 2018 Opuslink development team
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#-------------------------------------------------------------------------------
[package]
name = "opuslink"
version = "0.1.0"
authors = ["untocodes <untocodes@gmail.com>"]

[dependencies]
websocket = "0.21.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
tokio-core = "0.1"
simplelog = "0.5.3"
log = "0.4.6"



